--- a/movie.html
+++ b/movie.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>MovieInfo</title>
-	<link rel="stylesheet" type="text/css" href="https://bootswatch.com/cyborg/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/lux/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
